# serializer version: 1
# name: test_all_devices_data
  list([
    Device(device_id='9x9x1f12xx3x', date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc), main_device=True, bidirectional=True, type=<DeviceType.POWER_METER: 0>, name='Wohnung unten'),
    Device(device_id='9x9x1f12xx2x', date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc), main_device=True, bidirectional=True, type=<DeviceType.POWER_METER: 0>, name='Wohnung oben'),
    Device(device_id='9x9x1f12xx1x', date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc), main_device=True, bidirectional=False, type=<DeviceType.COLD_WATER_METER: 1>, name=None),
  ])
# ---
# name: test_power_meter_data
  PowerMeter(outdated=False, timestamp=datetime.datetime(2023, 12, 20, 10, 48, 51, tzinfo=datetime.timezone.utc), power=111, energy_usage=1111.111, energy_return=111.111, energy_usage_high_tariff=None, energy_usage_low_tariff=None)
# ---
# name: test_power_meter_full_data
  PowerMeter(outdated=False, timestamp=datetime.datetime(2023, 12, 20, 10, 48, 51, tzinfo=datetime.timezone.utc), power=111, energy_usage=1111.111, energy_return=111.111, energy_usage_high_tariff=1111.111, energy_usage_low_tariff=0.011)
# ---
# name: test_water_meter_data
  WaterMeter(outdated=False, timestamp=datetime.datetime(2023, 12, 20, 10, 45, 7, tzinfo=datetime.timezone.utc), cold_water=1111.111, warm_water=0.0)
# ---
